Changed old loadinput to a shorter version